--- a/0-/Client:Octopus.mediawiki
+++ b/0-/Client:Octopus.mediawiki
@@ -1,1 +1,1 @@
-{{Client| image=Client-Abraca.png| name=Octopus| author=[[Rainer Brodinger]]| website=http://octopusxmmsclient.blogspot.com| version=[https://octopus-xmms-client.googlecode.com/archive/d191ca20c8c0a13ad5a0bd76544a1396de2ab19f.zip 1.0.0]| devlanguage=Vala JavaScript| ui=GTK| screenshots=[http://3.bp.blogspot.com/-lOEyU6jy5Mo/Uzkk-tH8aiI/AAAAAAAAADw/k85B_aE3jMM/s1600/simple_white.jpg]| description=Octopus aims to provide visually appealing, stylable user interfaces for the XMMS2 music player. It heavily relies on metadata provided by the medialib.}}
+{{Client| image=Client-Octopus.png| name=Octopus| author=[[Rainer Brodinger]]| website=http://octopusxmmsclient.blogspot.com| version=[https://octopus-xmms-client.googlecode.com/archive/d191ca20c8c0a13ad5a0bd76544a1396de2ab19f.zip 1.0.0]| devlanguage=Vala JavaScript| ui=GTK| screenshots=[http://3.bp.blogspot.com/-lOEyU6jy5Mo/Uzkk-tH8aiI/AAAAAAAAADw/k85B_aE3jMM/s1600/simple_white.jpg]| description=Octopus aims to provide visually appealing, stylable user interfaces for the XMMS2 music player. It heavily relies on metadata provided by the medialib.}}
