--- a/10-Template/ReleaseStatus.mediawiki
+++ b/10-Template/ReleaseStatus.mediawiki
@@ -8,5 +8,5 @@
 '''Notes''':
 * DrO_o was released 2011-10-20,<br /> [[Download XMMS2 | check it out]] and [[Reporting bugs | report bugs]]!
 * XMMS2 is still under development.<br />You may [[Developer Corner|hack and help]] if you wish. :)
-* More up-to-date code can be found <br /> in the [http://git.xmms.se/xmms2/xmms2-devel/ xmms2-devel.git] tree.
+* More up-to-date code can be found <br /> in the [http://git.xmms2.org/xmms2/xmms2-devel/ xmms2-devel.git] tree.
 </div>
