s/xmms\.se/xmms2.org/
Levitation import of page 1195 rev 11226.

--- a/0-/Client:Chalyx.mediawiki
+++ b/0-/Client:Chalyx.mediawiki
@@ -1,1 +1,1 @@
-{{Client |name=Chalyx| author=[[Sham Chukoury]]| website=http://eleusis.f2o.org/projects/xmms2/chalyx/ &amp; http://git.xmms.se/?p=chalyx-eleusis.git;a=summary| version=Unknown| devlanguage=Python| ui=None| screenshots=N/A| description=Chalyx is a flexible and modular Python client library for XMMS2. What started off as a PyGTK project has evolved into a reusable collection of modules that may be used to quickly build other Python XMMS2 clients, integrate a player client into a larger Python application, or simply provide smarter presentation abilities. Chalyx also acts as an extended client library for MPD.}}
+{{Client |name=Chalyx| author=[[Sham Chukoury]]| website=http://eleusis.f2o.org/projects/xmms2/chalyx/ &amp; http://git.xmms2.org/xmms2/chalyx-eleusis/| version=Unknown| devlanguage=Python| ui=None| screenshots=N/A| description=Chalyx is a flexible and modular Python client library for XMMS2. What started off as a PyGTK project has evolved into a reusable collection of modules that may be used to quickly build other Python XMMS2 clients, integrate a player client into a larger Python application, or simply provide smarter presentation abilities. Chalyx also acts as an extended client library for MPD.}}
