s/xmms\.se/xmms2.org/
Levitation import of page 2279 rev 11245.

--- a/0-/Client:eq.mediawiki
+++ b/0-/Client:eq.mediawiki
@@ -1,1 +1,1 @@
-{{Client |name=eq| author=[[Daniel Svensson]]| website=http://exodus.xmms.se/~nano/eq.py| version=N/A| devlanguage=Python| ui=GTK| screenshots=http://exodus.xmms.se/~nano/eq.png| description=A simple equalizer client.}}
+{{Client |name=eq| author=[[Daniel Svensson]]| website=http://people.xmms2.org/~nano/eq.py| version=N/A| devlanguage=Python| ui=GTK| screenshots=http://people.xmms2.org/~nano/eq.png| description=A simple equalizer client.}}
