s/xmms\.se/xmms2.org/ but the links remain broken
Levitation import of page 1193 rev 11246.

--- a/0-/Client:medialib-ui.mediawiki
+++ b/0-/Client:medialib-ui.mediawiki
@@ -1,1 +1,1 @@
-{{Client| name=medialib-ui| author=[[Tobias RundstrÃ¶m]]| website=http://git.xmms.se/?p=medialib-ui.git;a=summary| version=Unknown| devlanguage=Python| ui=Qt| screenshots=N/A| description=This is a standalone medialib and playlist client. Aimed at functionality instead of pretty visuals. The idea is to have the client as a complement of a desktop-nice xmms client. It's written in python with PyQT widgetset. The code is available in the http://git.xmms.se repository. The client is very flexible and can be extended by adding own Python code in configuration directory.}}
+{{Client| name=medialib-ui| author=[[Tobias Rundström]]| website=http://git.xmms2.org/?p=medialib-ui.git;a=summary| version=Unknown| devlanguage=Python| ui=Qt| screenshots=N/A| description=This is a standalone medialib and playlist client. Aimed at functionality instead of pretty visuals. The idea is to have the client as a complement of a desktop-nice xmms client. It's written in python with PyQT widgetset. The code is available in the http://git.xmms2.org repository. The client is very flexible and can be extended by adding own Python code in configuration directory.}}
