s/xmms\.se/xmms2.org/
Levitation import of page 1181 rev 11248.

--- a/0-/Client:nyello.mediawiki
+++ b/0-/Client:nyello.mediawiki
@@ -1,1 +1,1 @@
-{{Client| name=nyello| author=[[SÃ©bastien Cevey]]| website=http://sirius.cine7.net/nyello/| version=[http://sirius.cine7.net/nyello/releases/nyello-0.5.0.tar.bz2 0.5.0] (works with DrGonzo - discontinued since DrJekyll)| devlanguage=C++| ui=Console| screenshots=[http://sirius.cine7.net/nyello/screenshots/help.png] [http://sirius.cine7.net/nyello/screenshots/search-and-enqueue.png]| description=nyello is a C++ command-line client that features a pseudo-shell interface (akin to [http://freshmeat.net/projects/xmms-shell/ xmms-shell]).  It will offer advanced features such as powerful medialib query patterns, collections and clever random playback. nyello is developed by [[SÃ©bastien Cevey]] and its [http://git.xmms.se/?p=nyello.git;a=summary development tree] is hosted in the http://git.xmms.se repository.}}
+{{Client| name=nyello| author=[[Sébastien Cevey]]| website=http://sirius.cine7.net/nyello/| version=[http://sirius.cine7.net/nyello/releases/nyello-0.5.0.tar.bz2 0.5.0] (works with DrGonzo - discontinued since DrJekyll)| devlanguage=C++| ui=Console| screenshots=[http://sirius.cine7.net/nyello/screenshots/help.png] [http://sirius.cine7.net/nyello/screenshots/search-and-enqueue.png]| description=nyello is a C++ command-line client that features a pseudo-shell interface (akin to [http://freshmeat.net/projects/xmms-shell/ xmms-shell]).  It will offer advanced features such as powerful medialib query patterns, collections and clever random playback. nyello is developed by [[Sébastien Cevey]] and its [http://git.xmms2.org/xmms2/nyello/ development tree] is hosted in the http://git.xmms2.org repository.}}
