s/xmms\.se/xmms2.org/
Levitation import of page 2461 rev 11250.

--- a/0-/Client:sisy.mediawiki
+++ b/0-/Client:sisy.mediawiki
@@ -1,1 +1,1 @@
-{{Client |name=sisy| author=[[user:nesciens | Erik Massop]]| website=http://git.xmms.se/xmms2/xmms2-nesciens/log/?h=sisy| version=0.0.1 | devlanguage=C | ui=Console | screenshots=N/A | description=Sisy is a client that parses a string to a collection-stucture and stores that one the daemon. Sisy's syntax is very simple (she has a '''si'''mple '''sy'''ntax), but also powerful. Sisy can easily be adapted to support new collection operators, which was the main reason for her birth. Sisy is the little sister of [[Client:Cocopapa|cocopapa]].}}
+{{Client |name=sisy| author=[[user:nesciens | Erik Massop]]| website=http://git.xmms2.org/xmms2/xmms2-nesciens/log/?h=sisy| version=0.0.1 | devlanguage=C | ui=Console | screenshots=N/A | description=Sisy is a client that parses a string to a collection-stucture and stores that one the daemon. Sisy's syntax is very simple (she has a '''si'''mple '''sy'''ntax), but also powerful. Sisy can easily be adapted to support new collection operators, which was the main reason for her birth. Sisy is the little sister of [[Client:Cocopapa|cocopapa]].}}
