s/xmms\.se/xmms2.org/
Levitation import of page 1204 rev 11251.

--- a/0-/Client:xmms2 blue.mediawiki
+++ b/0-/Client:xmms2 blue.mediawiki
@@ -1,2 +1,2 @@
-{{Client| name=xmms2_blue| author=[[Jens Taprogge]]| website=http://git.xmms.se/?p=xmms2-jlt.git;a=shortlog;h=blue| version=None| devlanguage=C| ui=Mobile phone| screenshots=N/A| description=The xmms2_blue client interfaces xmms2d to a Bluetooth enabled phone.  It is still fairly experimental, but basic functionality should work. The protocol used is described in Ericsson and Sony Ericsson documents.  So most likely the client will only work with phones of those brands.
-The sources can be obtained form the ''blue'' branch of [mailto:jlt_xmms2@shamrock.dyndns.org Jens Taprogge]'s xmms2 git tree at http://git.xmms.se/.}}
+{{Client| name=xmms2_blue| author=[[Jens Taprogge]]| website=https://github.com/XMMS2/xmms2-alumni/tree/jlt-blue| version=None| devlanguage=C| ui=Mobile phone| screenshots=N/A| description=The xmms2_blue client interfaces xmms2d to a Bluetooth enabled phone.  It is still fairly experimental, but basic functionality should work. The protocol used is described in Ericsson and Sony Ericsson documents.  So most likely the client will only work with phones of those brands.
+The sources can be obtained form the ''blue'' branch of [mailto:jlt_xmms2@shamrock.dyndns.org Jens Taprogge]'s xmms2 git tree at https://github.com/XMMS2/xmms2-alumni/.}}
