s/xmms\.se/xmms2.org/
Levitation import of page 736 rev 11258.

--- a/0-/Daniel Svensson.mediawiki
+++ b/0-/Daniel Svensson.mediawiki
@@ -1,2 +1,2 @@
-Started using XMMS2 back in 2003 when contributing the [http://git.xmms.se/?p=xmms2-devel.git;a=blobdiff;h=fe5a00c05fa7db8faba739c3abbc00fb8f9b3002;hp=1258782b2a25f2445121beff161d29c2f55e350e;f=src/plugins/alsa/alsa.c  ALSA output plugin]. Some minor fixes here and there while listening to [http://www.last.fm/user/dsvensson/ odd music] and watching Star Trek/Gate/whatever. Seems to study something at the University of Lund/Scania/Sweden. Can be contacted at the xmms2 irc channel under the nick 'nano' or by gmail: dsvensson 
+Started using XMMS2 back in 2003 when contributing the [http://git.xmms2.org/xmms2/xmms2-devel/log/src/plugins/alsa/alsa.c ALSA output plugin]. Some minor fixes here and there while listening to [http://www.last.fm/user/dsvensson/ odd music] and watching Star Trek/Gate/whatever. Seems to study something at the University of Lund/Scania/Sweden. Can be contacted at the xmms2 irc channel under the nick 'nano' or by gmail: dsvensson 
 [[Category: People]]
